src/assets/styles/styles.css
/* imports */

@font-face {
	font-family: 'proxima_nova_rgregular';
	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot');
	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.woff') format('woff'),
		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.ttf') format('truetype'),
		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.svg#proxima_nova_rgregular') format('svg');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'proxima_nova_rgbold';
	src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot');
	src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot?#iefix') format('embedded-opentype'),
    url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.woff') format('woff'),
		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.ttf') format('truetype'),
		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.svg#proxima_nova_rgbold') format('svg');
	font-weight: normal;
	font-style: normal;
}

/* global */

* {
    font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
}

/* utlity classes */

h1 {
    font-size: 1.875rem;
    line-height: 2.25rem;
}

h2 {
    font-size: 1.125rem;
    line-height: 1.375rem;
}

h3 {
    font-size: 1rem;
    line-height: 1.375rem;
}

p {
    font-size: 0.875rem;
    line-height: 1rem;
}

.grey-out {
    color: #1A1919;
    opacity: 0.5;
}

/* layout */

body {
    margin: 25px;
}

.wrapper {
    display: grid;
    /* grid-template-columns: 0.5fr repeat(9, minmax(auto, 1fr)); */
    grid-template-columns: min-content;
    grid-auto-rows: minmax(100px, auto);
    grid-template-areas: 
        "sn mn mn mn mn mn mn mn mn mn mn"
        "sn hd hd hd hd hd hd hd hd hd hd"
        "sn mc mc mc mc mc mc mc mc mc mc"
        "ft ft ft ft ft ft ft ft ft ft ft"
}

/* side nav bar*/
/* TODO:  other elements in grid to fill in space*/
.sidenav {
    grid-area: sn;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    background-color: #042235;
    padding: 1rem 0;
    max-width: fit-content;
}

.sidenav-item {
    color: #fff;
    opacity: 0.3;
    padding: 0.5rem;
    width: 100%;
    box-sizing: border-box;
    text-align: center;
    margin: 0;
}

.sidenav-item:last-child {
    margin-top: auto;
}

.sidenav-item:hover {
    background-color: #2995DA;
    opacity: 1;
}

/* top nav bar */

.main-nav {
    grid-area: mn;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    background-color: #fff;
    gap: 1rem;
    height: 5rem;
    border-bottom: 1px solid #E2E2E2;
    vertical-align: middle;
}

.main-nav > div:nth-child(-n+2) {
    display: flex;
    height: 100%;
    padding: 0 1rem;
}

.main-nav h2 {
    margin: auto;
}

.main-nav > div:first-child{
    border: 1px solid #E2E2E2;
}

.main-nav > div:nth-last-child(2) {
    margin-left: auto;
}

.inbox-btn {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
}

.notification-badge {
    position: absolute;
    top: -12px;
    right: -12px;
    width: 18px;
    height: 18px;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 2px solid #fff;
    border-radius: 50%;
    background-color: #2995DA;
    color: #fff;
    font-size: 0.75rem;
    line-height: 0.75rem;
    padding: 0.1rem;
}

.profile-info {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.profile-img {
    width: 36px;
    height: 36px;
    border-radius: 50%;
}

/* header */

.header {
    display: flex;
    align-items: center;
    gap: 1rem;
    padding: 0 1rem;
    grid-area: hd;
    background-color: #fff;
}

.create-team-btn {
    margin-left: auto;
    display: flex;
    background-color: #40D2BF;
    color: #fff;
    height: 2rem;
    border: none;
    border-radius: 4px;
    align-items: center;
    gap: 0.5rem;
    padding: 0.75rem 0.875rem 0.75rem 0.625rem;
}

/* main */

.main-bg {
    grid-area: mc;
    display: flex;
    justify-content: space-between;
    padding: 2rem;
    background-color: #E5E5E5;
    gap: 1rem;
}


.main-content {
    display: flex;
    background-color: #fff;
    flex-direction: column;
    /* min-width: 100; */
    /* width: 75%; */
    flex: 2 1 auto;
    padding: 1rem 2rem;
    /* max-height: 75%; */
}

.main-content > div {
    display: flex;
}

.content-header {
    justify-content: space-between;
    border-bottom: 1px solid #E4E7EC;
}

.cards-grid {
    flex-wrap: wrap;
    gap: 1rem;
    padding: 1rem 0;
}

.team-card {
    flex-direction: column;
    max-width: 300px;
    padding: 1rem 1rem 0rem 1rem;
    border-radius: 4px;
    border: 1px solid #E4E7EC;
}

.team-card > div {
    display: flex;
}

.team-header {
    gap: 1rem;
}

.team-details {
    flex-direction: column;
}

.team-details > * {
    margin: 0;
}

.team-logo {
    width: 36px;
    height: 36px;
}

.team-header > *:last-child {
    margin-left:auto;
}

.team-metrics {
    display: flex;
    gap: 0.5rem;
    border-top: 1px solid #E4E7EC;
    align-items: center;
    color: #000;
    opacity: 0.5;
}

.team-metrics > * {
    margin: 1rem 0;
}

/* activity */

.activity-container {
    background-color: #fff;
    display: flex;
    flex: 1 1 auto;
    flex-direction: column;
    min-height: fit-content;
    max-height: 40%;
    /* overflow-y: scroll; */
    padding: 1rem;
}

.activity-header {
    border-bottom: 1px solid #E4E7EC;
}

.activity-card {
    display: flex;
    gap: 1rem;
    margin: 0.5rem 0;
    /* min-width: 75%; */
}

.activity-avatar {
    border-radius: 50%;
    width: 36px;
    height: 36px;
}

.activity-details {
    display: flex;
    flex-direction: column;
    gap: 0.2rem;
}

.activity-details > p {
    margin: 0;
}

.footer {
    grid-area: ft;
    background-color: pink;
}

